--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.21)
-project(untitled1)
+project(Microdb)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(untitled1 main.cpp idx.h db.h db.cpp)
+add_executable(microdb main.cpp idx.h db.h db.cpp)
+add_executable(performance_test test.cpp idx.h db.h db.cpp)
