delete unnecessary files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Microdb)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(microdb main.cpp idx.h db.h db.cpp)
-add_executable(performance_test test.cpp idx.h db.h db.cpp)
+add_executable(tests test.cpp idx.h db.h db.cpp)
